--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/nicol/Documents/Uniandes/Quinto semestre/Infracomp/Caso 2/Caso2Proyecto/bcpkix-jdk15on-161.jar"/>
-	<classpathentry kind="lib" path="C:/Users/nicol/Documents/Uniandes/Quinto semestre/Infracomp/Caso 2/Caso2Proyecto/bcprov-jdk15on-161.jar"/>
-	<classpathentry kind="lib" path="C:/Users/nicol/Documents/Uniandes/Quinto semestre/Infracomp/Caso 2/Caso2Proyecto/Servidorcs.jar"/>
-	<classpathentry kind="lib" path="C:/Users/nicol/Documents/Uniandes/Quinto semestre/Infracomp/Caso 2/Caso2Proyecto/Servidorss.jar"/>
+	<classpathentry kind="lib" path="bcprov-jdk15on-161.jar"/>
+	<classpathentry kind="lib" path="bcpkix-jdk15on-161.jar"/>
+	<classpathentry kind="lib" path="Servidorss.jar"/>
+	<classpathentry kind="lib" path="Servidorcs.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
